# pmtiles-mobile

./: .gitignore  CMakeLists.txt  LICENSE  Package.swift  README.md  THIRD_PARTY_LICENSES  jitpack.yml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
Sources/PMTiles/: PMTiles.swift  pmtiles_core.swift
android/: build.gradle.kts  settings.gradle.kts
android/pmtiles/: build.gradle.kts
android/pmtiles/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
android/pmtiles/src/main/kotlin/com/mapeak/pmtiles/: PMTiles.kt  PMTilesReader.kt
core/: CMakeLists.txt  Cargo.toml  uniffi.toml
core/.cargo/: config.toml
core/include/: pmtiles_c.h
core/src/: lib.rs  pmtiles_c.cpp  pmtiles_reader.rs  pmtiles_writer.rs  reader.cpp  reader.hpp
core/tests/: roundtrip.rs
scripts/: build-xcframework.sh
tests/: test_reader.cpp
