[package]
name = "pmtiles_core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared PMTiles reader core for Android & iOS, with UniFFI bindings"
publish = false

[lib]
name = "pmtiles_core"
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
uniffi = { version = "0.29", features = ["cli"] }
flate2 = "1.0"
thiserror = "2.0"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi_bindgen.rs"
